<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/button_app_bars_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_bars_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/button_bottom_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_navigation"
            app:layout_constraintBottom_toBottomOf="@id/button_cards"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_app_bars_top" />
        <Button
            android:id="@+id/button_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cards"
            app:layout_constraintBottom_toBottomOf="@id/button_dialogs"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_bottom_navigation" />
        <Button
            android:id="@+id/button_dialogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogs"
            app:layout_constraintBottom_toBottomOf="@id/button_navigation_drawer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_cards" />
        <Button
            android:id="@+id/button_navigation_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigation_drawer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_dialogs" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>